--- a/test/fixtures/basic/src/index.html.jade
+++ b/test/fixtures/basic/src/index.html.jade
@@ -23,3 +23,4 @@ html(lang="en")
         templating language with a
         strong focus on performance
         and powerful features.
+      include ./_included.html.jade
