--- a/test/fixtures/subfolder/src/layouts/page.pug
+++ b/test/fixtures/subfolder/src/layouts/page.pug
@@ -1,5 +1,5 @@
 ---
-pageTitle: Jade
+pageTitle: Hello World
 pretty: true
 ---
 doctype html
@@ -7,4 +7,3 @@ html(lang="en")
   head
     title= pageTitle
   body!= contents
-
