Update relative including with Twig test

--- a/test/fixtures/include-twig/src/subpage/subpage.twig
+++ b/test/fixtures/include-twig/src/subpage/subpage.twig
@@ -5,8 +5,9 @@ buttons:
   - title: How
   - title: Are
   - title: You
+title: Subpage
 ---
-<h1>Buttons</h1>
+<h1>{{ title }}</h1>
 <div class="buttons">
-  {% include 'components/button-group/_button-group.twig' %}
+  {% include '../components/button-group/_button-group.twig' %}
 </div>
